# c_libs

./: .gitignore  README.rst  requirements.txt
c_libs/: CMakeLists.txt  main.c
c_libs/include/: '  CMakeLists.txt  admin.c  admin.h  array.c  array.h  btree.c  btree.h  data_structures.c  data_structures.h  llist.c  llist.h  print.c  print.h  str.c  str.h  swap.c  swap.h  vec.c  vec.h  vector.c  vector.h
c_libs/test/: CMakeLists.txt  test.cpp  test_array.cpp  test_btree.c  test_btree.h  test_list.c  test_list.h  test_string.c  test_string.h  test_swap.c  test_swap.h  test_vec.cpp  test_vector.c  test_vector.cpp  test_vector.h  unit_test.c
docs/doxygen/: Doxyfile  mainpage.dox
docs/doxygen/doxygen_docs/html/: annotated.html  classes.html  data__structures_8c.html  data__structures_8c_source.html  data__structures_8h.html  data__structures_8h_source.html  dir_11112956ef6403c271bfa3682a64cf64.html  dir_d070de5338f3b73eeb360c61cb49c5c1.html  files.html  functions.html  functions_vars.html  globals.html  globals_b.html  globals_c.html  globals_d.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_f.html  globals_func.html  globals_func_b.html  globals_func_c.html  globals_func_d.html  globals_func_f.html  globals_func_i.html  globals_func_l.html  globals_func_m.html  globals_func_p.html  globals_func_r.html  globals_func_s.html  globals_func_t.html  globals_func_u.html  globals_func_v.html  globals_g.html  globals_i.html  globals_l.html  globals_m.html  globals_p.html  globals_r.html  globals_s.html  (+48 more)
docs/doxygen/doxygen_docs/latex/: annotated.tex  data__structures_8c.tex  data__structures_8c_source.tex  data__structures_8h.tex  data__structures_8h_source.tex  dir_11112956ef6403c271bfa3682a64cf64.tex  dir_d070de5338f3b73eeb360c61cb49c5c1.tex  files.tex  index.tex  print_8c.tex  print_8c_source.tex  print_8h.tex  print_8h_source.tex  refman.tex  structBool.tex  structChar.tex  structDble.tex  structFlt.tex  structInt.tex  structLDble.tex  structLInt.tex  structLLInt.tex  structShort.tex  structString.tex  structUChar.tex  structUInt.tex  structULInt.tex  structULLInt.tex  structUShort.tex  swap_8c.tex  swap_8c_source.tex  swap_8h.tex  swap_8h_source.tex  vector_8c.tex  vector_8c_source.tex  vector_8h.tex  vector_8h_source.tex
docs/doxygen/doxygen_docs/xml/: Doxyfile.xml  compound.xsd  data__structures_8c.xml  data__structures_8h.xml  dir_11112956ef6403c271bfa3682a64cf64.xml  dir_d070de5338f3b73eeb360c61cb49c5c1.xml  index.xml  indexpage.xml  print_8c.xml  print_8h.xml  structBool.xml  structChar.xml  structDble.xml  structFlt.xml  structInt.xml  structLDble.xml  structLInt.xml  structLLInt.xml  structShort.xml  structString.xml  structUChar.xml  structUInt.xml  structULInt.xml  structULLInt.xml  structUShort.xml  swap_8c.xml  swap_8h.xml  vector_8c.xml  vector_8h.xml
docs/doxygen/generated_docs/html/: annotated.html  classes.html  data__structures_8c.html  data__structures_8c_source.html  data__structures_8h.html  data__structures_8h_source.html  dir_11112956ef6403c271bfa3682a64cf64.html  dir_d070de5338f3b73eeb360c61cb49c5c1.html  files.html  functions.html  functions_vars.html  globals.html  globals_b.html  globals_c.html  globals_d.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_f.html  globals_func.html  globals_func_b.html  globals_func_c.html  globals_func_d.html  globals_func_f.html  globals_func_i.html  globals_func_l.html  globals_func_m.html  globals_func_p.html  globals_func_r.html  globals_func_s.html  globals_func_t.html  globals_func_u.html  globals_func_v.html  globals_g.html  globals_i.html  globals_l.html  globals_m.html  globals_p.html  globals_r.html  globals_s.html  (+20 more)
docs/doxygen/generated_docs/latex/: annotated.tex  data__structures_8c.tex  data__structures_8c_source.tex  data__structures_8h.tex  data__structures_8h_source.tex  dir_11112956ef6403c271bfa3682a64cf64.tex  dir_d070de5338f3b73eeb360c61cb49c5c1.tex  files.tex  index.tex  print_8c.tex  print_8c_source.tex  print_8h.tex  print_8h_source.tex  refman.tex  structString.tex  swap_8c.tex  swap_8c_source.tex  swap_8h.tex  swap_8h_source.tex  vector_8c.tex  vector_8c_source.tex  vector_8h.tex  vector_8h_source.tex
docs/doxygen/html/: annotated.html  array_8c.html  array_8h.html  array_8h_source.html  classes.html  dir_11112956ef6403c271bfa3682a64cf64.html  dir_d070de5338f3b73eeb360c61cb49c5c1.html  files.html  functions.html  functions_vars.html  globals.html  globals_c.html  globals_d.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_f.html  globals_func.html  globals_i.html  globals_l.html  globals_m.html  globals_n.html  globals_o.html  globals_p.html  globals_r.html  globals_s.html  globals_u.html  index.html  menudata.js  structArray-members.html  structArray.html  structStringVector-members.html  structStringVector.html  structVector-members.html  structVector.html  vec_8c.html  vec_8h.html  vec_8h_source.html  vector_8c.html  vector_8h.html  (+1 more)
docs/doxygen/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_1.js  (+29 more)
docs/doxygen/latex/: annotated.tex  array_8c.tex  array_8h.tex  array_8h_source.tex  dir_d070de5338f3b73eeb360c61cb49c5c1.tex  files.tex  refman.tex  structArray.tex  structStringVector.tex  structVector.tex  vec_8c.tex  vec_8h.tex  vec_8h_source.tex  vector_8c.tex  vector_8h.tex  vector_8h_source.tex
docs/doxygen/sphinx_docs/: btree.rst  conf.py  error.rst  index.rst  linked_list.rst  print.rst  strings.rst  swap.rst  vector.rst
scripts/zsh/: build.zsh  compile.zsh  makefile
(+75 files in other folders)
