# ================================================================================
# ================================================================================
# - File:    CMakeLists.txt
# - Purpose: Secondary CMake file for C build system
#
# Source Metadata
# - Author:  Jonathan A. Webb 
# - Date:    March 26, 2022
# - Version: 1.0
# - Copyright: Copyright 2022, Jon Webb Inc.
# ================================================================================
# ================================================================================

add_library(include
    vector.c
	vector.h
)

target_include_directories(include PUBLIC .)
# ================================================================================
# ================================================================================
# eof
